# foundry

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/forge-plan/: SKILL.md
.claude/skills/forge-status/: SKILL.md
.forge/: governor.py  slice.yaml
.forge/contracts/: commit-discipline.yaml  merge-strategy.yaml  testing.yaml  workitem-discipline.yaml
.forge/hooks/: post-merge  pre-bash.sh
.github/: PULL_REQUEST_TEMPLATE.md
src/foundry/: config.py
src/foundry/cli/: __init__.py  build.py  errors.py  features.py  generate.py  ingest.py  init.py  main.py  remove.py  status.py
src/foundry/db/: __init__.py  connection.py  migrations.py  models.py  repository.py  schema.py  vectors.py
src/foundry/gates/: __init__.py  parser.py
src/foundry/generate/: templates.py  writer.py
src/foundry/ingest/: __init__.py  audio.py  base.py  embedding_writer.py  epub.py  git_chunker.py  json_chunker.py  markdown.py  pdf.py  plaintext.py  summarizer.py  web.py
src/foundry/rag/: __init__.py  assembler.py  llm_client.py  retriever.py
tests/: conftest.py  test_governor.py
tests/unit/: test_config.py
tests/unit/cli/: test_build.py  test_errors.py  test_features.py  test_generate.py  test_ingest.py  test_init.py  test_remove.py  test_status.py
tests/unit/db/: test_connection.py  test_migrations.py  test_repository.py  test_schema.py  test_vectors.py
tests/unit/gates/: test_parser.py
tests/unit/generate/: test_templates.py  test_writer.py
tests/unit/ingest/: test_audio_chunker.py  test_embedding_writer.py  test_epub_chunker.py  test_git_chunker.py  test_json_chunker.py  test_markdown_chunker.py  test_pdf_chunker.py  test_plaintext_chunker.py  test_summarizer.py  test_web_chunker.py
tests/unit/rag/: test_assembler.py  test_llm_client.py  test_retriever.py
tracking/: STATUS.md
tracking/decisions/: DECISIONS.md
tracking/features/: F00-SCAFFOLD.md  F01-DB.md  F02-INGEST.md  F03-RAG-GENERATE.md  F04-FEATURE-GATES.md  F05-CLI.md  F06-PROJECT-GOVERNANCE.md  F07-PLANNING.md  F08-DOCS.md
tracking/sprints/: SP_001.md  SP_002.md  SP_003.md  SP_004.md  SP_005.md  SP_006.md  SP_007.md
